--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGODB_URI = mongodb+srv://blessy:blessy@2021>@cluster0.8wsiw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://blessy:blessy@cluster0.8wsiw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
